# cmake_test

./: .clangd.bak  .gitignore  .secure_azone  .secure_xml  AGENTS.md  CMakeLists.txt  Config.cmake  claude.md  compile_commands.json  configuration.xml  ra_cfg.txt  tjc_py.txt
Algorithm/: afe_control.hpp  bsp_algorithm.hpp  dsp_preprocess.hpp  ecm_fitter.hpp  eis_data_pipeline.cpp  eis_data_pipeline.hpp  eis_safety_monitor.hpp  eis_sweep_manager.hpp  osl_calibration.hpp
Application/: Phase_test.cpp  eeprom_app.cpp  eis_algorithm.cpp  eis_uart_verify.cpp  uart_screen.cpp  uart_screen.hpp
Driver/: bsp_tjc_hmi.cpp  bsp_tjc_hmi.hpp
User_app/: eis_screen.cpp  eis_screen.hpp
ra_cfg/fsp_cfg/bsp/: bsp_cfg.h  bsp_mcu_family_cfg.h
ra_gen/: Screen_Thread.c  Screen_Thread.h  hal_data.c  hal_data.h  main.c  pin_data.c  vector_data.c  vector_data.h
src/: App2_Thread_entry.cpp  App_Thread_entry.cpp  Screen_Thread_entry.cpp  bsp_config.h
src/ADC/: bsp_adc.c
src/TIMER/: bsp_timer.c
src/UART/: bsp_usart.c  bsp_usart.h
